# studio-display-control

./: .gitignore  Cargo.toml  README.md  RELEASE_NOTES.md  build.rs
src/: main.rs
ui/: BrightnessUI.slint
