[package]
name = "studi"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[dependencies]
hidapi = "2.6.3"
glob = "0.3.1"
clap = { version = "4.5" }
clap-num = "1.0.2"
regex = "1.10.6"
log = "0.4.22"
stderrlog = "0.6.0"
slint = "1.10.0"

[build-dependencies]
slint-build = "1.10.0"
resvg = "0.43"
image = "0.25"
ico = "0.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"